# vibeshkoder

./: .dockerignore  .env.dev.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile.bot  Dockerfile.web  PHASE4_STREAM_A_PROMPT.md  PHASE4_STREAM_B_PROMPT.md  PHASE4_STREAM_C_PROMPT.md  PHASE4_STREAM_D_PROMPT.md  PHASE4_STREAM_E_PROMPT.md  README.md  SPEC.md  STREAM.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  llms.txt  phone_login.py  pyproject.toml  scan_work.py  test_all.py  test_flow.py  transcribe_voice.py
.github/workflows/: ci.yml  evals.yml  healing.yml  healthcheck.yml  lint-privacy.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_application_submitted_at.py  002_member_tag_cooldowns.py  003_add_feature_flags.py  005_add_telegram_updates.py  006_extend_chat_messages.py  007_add_message_versions.py  008_backfill_message_versions_v1.py  009_add_offrecord_marks.py  009_bind_application_invites.py  011_add_offrecord_marks.py  012_invite_outbox_pending_unique.py  013_add_forget_events.py  013_add_users_imported_flag.py  016_add_message_version_content_hash_unique.py  016_ingestion_runs_partial_unique_running.py  017_ingestion_runs_partial_unique_running.py  018_add_message_versions_imported_final.py  019_add_ingestion_runs_rolled_back.py  020_add_message_versions_fts.py  021_align_message_versions_search_tsv.py  022_add_qa_traces.py  023_backfill_v1_live_post_t1_07.py  024_add_llm_usage_ledger_and_cache.py
bot/: __main__.py  cli.py  config.py  html_escape.py  texts.py
docs/: BACKLOG.md  ai-memory-layer-proposal.md  runbook.md
scripts/: cleanup-legacy.sh  lint_privacy_check.sh  precommit-privacy-allowlist.sh
tests/: conftest.py  test_alias.py  test_chat_events.py  test_chat_messages_no_auto_member.py  test_cli_import_dry_run.py  test_display_name.py  test_html_escape.py  test_intro_refresh.py  test_invite_admission.py  test_invite_outbox.py  test_login_rate_limit.py  test_questionnaire.py  test_scheduler.py  test_scheduler_deadlines.py  test_settings.py  test_sheets_sync.py  test_start_vouched.py  test_vouch.py  test_web_app.py  test_web_auth.py
web/: __main__.py  app.py  auth.py  dependencies.py
(+209 files in other folders)
