[project]
name = "vibe-gatekeeper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "gspread-asyncio>=2.0",
    "gspread>=6.0",
    "google-auth>=2.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.34",
    "apscheduler>=3.10,<4",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "itsdangerous>=2.0",
    "httpx>=0.28",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    # aiosqlite is dev-only — used by tests/test_scheduler_deadlines.py for in-memory sqlite
    # isolation. Production runtime requires postgres (T0-02; see bot/db/engine.py).
    "aiosqlite>=0.20",
    "ruff>=0.11",
    "mypy>=1.15",
]
ops = [
    "telethon>=1.39",
]
healing = [
    "cryptography>=43",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
